# advent-of-code

./: .gitignore
2015/rust/: Cargo.toml
2015/rust/src/: lib.rs  token_dict.rs
2016/: 01.js  02.js  03.rb  04.rb
2017/01/: instructions  solve.ex
2017/02/: instructions  solve.ex
2017/03/: instructions  solve.ex  solve2.ex
2017/04/: solve.ex  solve2.ex
2017/05/: solve.ex  solve.rb
2017/06/: solve.ex  solve2.ex
2017/07/: instructions  solve.ex  solve2.ex
2017/08/: solve.ex  solve2.ex
2017/09/: solve.ex  solve2.ex
2017/10/: instructions  solve.ex  solve2.ex
2017/11/: solve.ex  solve2.ex
2017/12/: solve.ex  solve2.ex
2017/13/: solve.ex  solve2.ex
2017/14/: instructions  knot_hash.ex  solve.ex  solve2.ex
2017/15/: instructions  solve.ex  solve2.ex
2017/16/: instructions  solve.ex  solve2.ex
2017/17/: instructions  solve.ex  solve2.ex
2017/18/: solve.ex  solve2.ex
2017/19/: solve.ex
2017/20/: solve.ex  solve2.ex
2017/21/: instructions  solve.ex
2017/22/: solve.ex  solve2.ex
2017/23/: solve.ex  solve2.ex  trything.ex  trything2.ex  trything3.ex
2017/24/: solve.ex  solve2.ex
2017/25/: solve.ex
2019/01/: solve.py
2019/02/: solve.py
2019/03/: solve.rb
2020/01/: input.txt  solve.ex
2020/02/: solve.ex
2020/03/: solve.ex
2020/04/: solve.ex  test2.txt
2020/05/: solve.ex
2020/06/: solve.ex
2020/07/: solve.ex
2020/08/: solve.ex
2020/09/: solve.ex
2020/10/: solve.ex
2020/11/: solve.ex
2020/12/: solve.ex
2020/13/: solve.ex
2020/14/: solve.ex
2020/15/: solve.ex
2020/16/: solve.ex
2020/17/: solve.ex
(+67 files in other folders)
