[package]
name = "aoc"
version = "0.1.0"
authors = ["Jon Zepernick <jonzeper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.4"
md5 = "0.7.0" # 2015, day 4
ansi_term = "0.12.1"
regex = "1"
fancy-regex = "0.4.1" # 2015, day 5 (regex crate doesn't support backrefs)
itertools = "0.10.0"
json = "0.12.4" # 2015, day 12

[profile.dev]
opt-level = 1
